--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -12,9 +12,10 @@
 @import "./atoms/radio";
 @import "./atoms/input";
 @import "./atoms/checkbox";
+@import "./atoms/titles";
 
 // molecule
 
 // organisms
-
+@import "./organisms/welcom";
 // pages
