--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -8,6 +8,7 @@
 @import "./base/dev";
 
 // atoms
+@import "./atoms/separator";
 @import "./atoms/button";
 @import "./atoms/radio";
 @import "./atoms/input";
@@ -17,5 +18,6 @@
 // molecule
 
 // organisms
-@import "./organisms/welcom";
+@import "./organisms/welcome";
+@import "./organisms/signinup";
 // pages
