--- a/assets/scss/atoms/_button.scss
+++ b/assets/scss/atoms/_button.scss
@@ -6,6 +6,7 @@
    user-select: none;
    cursor: pointer;
    border-radius: 20px;
+   height: 44px;
    padding: $spacer-2 $spacer-5;
 
    &--black{
