lucky draw card

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -16,6 +16,7 @@
 
 // molecule
 @import "./molecules/coupon";
+@import "./molecules/lucky-draw-card";
 // organisms
 @import "./organisms/welcom";
 // pages
