--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -20,4 +20,5 @@
 @import "./organisms/welcom";
 @import "./organisms/footer";
 @import "./organisms/ramdan-rewards";
+@import "./organisms/my-referrals";
 // pages
