--- a/assets/scss/base/_colors.scss
+++ b/assets/scss/base/_colors.scss
@@ -4,3 +4,4 @@ $color-white: rgb(255, 255, 255);
 $color-white2 : rgb(245, 245, 250);
 $color-yellow : rgb(255, 221, 0);
 $color-grey : rgb(117, 111, 117);
+$color-grey2 : rgb(245, 245, 250);
