--- a/assets/scss/organisms/_signinup.scss
+++ b/assets/scss/organisms/_signinup.scss
@@ -1,7 +1,26 @@
 .wu-signinup{
+   position: relative;
+   overflow: hidden;
+
    .wu-title{
       text-align: center;
       margin-bottom: $spacer-5;
+   }
+   .wu-separator{
+      margin-top: $spacer-6;
+      margin-bottom: $spacer-6;
+   }
+   &__ormimg{
+      position: absolute;
+      right: 0px;
+      top: -24px;
+      width: 110px;
+   }
+   &__content{
+      padding-top: $spacer-5;
+   }
+   &__signup{
+      padding-top: $spacer-6;
    }
    &__act{
       display: flex;
@@ -16,8 +35,9 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      margin-bottom: $spacer-3;
       .wu-checkbox{
-         margin-right: $spacer-3;
+         margin-right: $spacer-2;
       }
       .wu-label{
          cursor: pointer;
@@ -29,5 +49,8 @@
             }
          }
       }
+   }
+   .wu-footer{
+      margin-top: -$spacer-3;
    }
 }
