--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -14,6 +14,7 @@
 @import "./atoms/input";
 @import "./atoms/checkbox";
 @import "./atoms/titles";
+@import "./atoms/countrycode-select";
 
 // molecule
 
