--- a/assets/scss/organisms/_my-referrals.scss
+++ b/assets/scss/organisms/_my-referrals.scss
@@ -1,4 +1,6 @@
 .wu-referrals {
+    padding: $spacer-3 0;
+
     &__head {
         text-align: center;
 
@@ -10,10 +12,11 @@
     &__body {
         margin: $spacer-4 0;
         background-color: $color-grey2;
-        padding: $spacer-3;
+        padding: 0 $spacer-3;
     }
 
     &__tile {
+        padding: $spacer-3 0;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -26,7 +29,7 @@
     }
 
     &__tiledesc {
-        max-width: 70%;
+        max-width: 60%;
         font-size: 20px;
         color: $color-grey;
         font-weight: $font-semi-bold;
@@ -45,4 +48,33 @@
         }
     }
 
+    &__links {
+        padding: $spacer-3 0;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: space-between;
+    }
+
+    &__linkitem {
+        display: flex;
+        align-items: center;
+        color: $color-grey;
+
+        svg {
+            margin-left: $spacer-2;
+            width: 10px;
+            height: 10px;
+        }
+    }
+
+    &__btn {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .wu-btn {
+            margin: 0 $spacer-2;
+        }
+    }
 }
