--- a/assets/scss/organisms/_my-referrals.scss
+++ b/assets/scss/organisms/_my-referrals.scss
@@ -39,6 +39,11 @@
         }
     }
 
+    &__tilesub {
+        font-size: 16px;
+        font-weight: $font-semi-bold;
+    }
+
     &__tileimg {
         margin-top: $spacer-3;
         width: 175px;
