--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -25,4 +25,5 @@
 @import "./organisms/footer";
 @import "./organisms/ramdan-rewards";
 @import "./organisms/my-referrals";
+@import "./organisms/lucky-draw";
 // pages
