--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -23,4 +23,5 @@
 @import "./organisms/signinup";
 @import "./organisms/footer";
 @import "./organisms/ramdan-rewards";
+@import "./organisms/tab";
 // pages
