--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -19,6 +19,8 @@
 // molecule
 @import "./molecules/coupon";
 @import "./molecules/lucky-draw-card";
+@import "./molecules/coupon-modal";
+@import "./molecules/share-modal";
 // organisms
 @import "./organisms/welcome";
 @import "./organisms/signinup";
