--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -21,6 +21,7 @@
 @import "./molecules/lucky-draw-card";
 @import "./molecules/coupon-modal";
 @import "./molecules/share-modal";
+
 // organisms
 @import "./organisms/welcome";
 @import "./organisms/signinup";
@@ -29,4 +30,5 @@
 @import "./organisms/my-referrals";
 @import "./organisms/lucky-draw";
 @import "./organisms/tab";
+@import "./organisms/yes";
 // pages
