--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -25,6 +25,7 @@
 @import "./organisms/welcome";
 @import "./organisms/signinup";
 @import "./organisms/footer";
+@import "./organisms/header";
 @import "./organisms/ramdan-rewards";
 @import "./organisms/my-referrals";
 @import "./organisms/lucky-draw";
