--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -29,4 +29,5 @@
 @import "./organisms/my-referrals";
 @import "./organisms/lucky-draw";
 @import "./organisms/tab";
+@import "./organisms/my-coupons";
 // pages
