--- a/assets/scss/molecules/_coupon.scss
+++ b/assets/scss/molecules/_coupon.scss
@@ -1,4 +1,4 @@
-.wu-coupon{
+.wu-coupon {
     width: 100%;
     display: flex;
     align-items: center;
@@ -6,7 +6,10 @@
     background-color: #1E1E1E;
     text-decoration: none;
     padding: $spacer-3;
-    &__left{
+    position: relative;
+    overflow: hidden;
+
+    &__left {
         width: 35%;
         background-color: transparent;
         border: 2px solid $color-yellow;
@@ -14,7 +17,7 @@
         position: relative;
 
         &::after,
-        &::before{
+        &::before {
             content: "";
             position: absolute;
             width: 4px;
@@ -23,22 +26,25 @@
             top: 20%;
             left: -3px;
         }
-        &::before{
+
+        &::before {
             left: unset;
             right: -3px;
         }
     }
-    &__img{
+
+    &__img {
         width: 100%;
         display: flex;
         align-items: center;
         justify-content: center;
 
-        img{
+        img {
             width: 100%;
         }
     }
-    &__share{
+
+    &__share {
         position: absolute;
         display: flex;
         justify-content: center;
@@ -48,19 +54,20 @@
         width: 16px;
         height: 16px;
         transform: translateY(-50%);
+
         img,
-        svg{
+        svg {
             width: 100%;
         }
     }
 
-    &__right{
+    &__right {
         flex: 1;
         padding: $spacer-2;
         text-align: center;
         position: relative;
 
-        &_arrow{
+        &_arrow {
             width: 10px;
             height: 16px;
             display: flex;
@@ -69,13 +76,14 @@
             position: absolute;
             bottom: 0;
             right: 0;
-            svg{
+
+            svg {
                 width: 100%;
             }
         }
     }
 
-    &__status{
+    &__status {
         font-size: 16px;
         font-weight: $font-medium;
         line-height: 18px;
@@ -84,50 +92,103 @@
         display: none;
     }
 
-    &__price{
+    &__price {
         font-size: 60px;
         line-height: 61px;
         color: $color-grey;
     }
 
-    &__transac{
+    &__transac {
         font-size: 14px;
         color: $color-grey;
     }
 
-    &__valid{
+    &__valid {
         font-size: 12px;
         color: #B0A7B0;
     }
 
-    &--redeemed{
+    &__hid {
+        position: absolute;
+        width: 0;
+        height: 100%;
+        right: 0;
+        top: 0;
+        background-color: $color-yellow;
+        transition: 0.3s;
+
+        &--active {
+            width: 100%;
+            transition: 0.3s;
+        }
+    }
+
+    &__hidouter {
+        padding: $spacer-3 $spacer-6;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        position: relative;
+
+        .wu-coupon__right_arrow {
+            bottom: 15px;
+            right: unset;
+            left: 15px;
+            transform: rotate(182deg);
+
+            svg {
+                path {
+                    fill: $color-grey;
+                }
+            }
+        }
+    }
+
+    &__terms {
+        font-size: 16px;
+        font-weight: $font-semi-bold;
+        color: $color-grey;
+        margin-bottom: $spacer-2;
+    }
+
+    &__list {
+        color: $color-grey;
+        list-style: disc;
+        padding-left: $spacer-3;
+        font-size: 12px;
+    }
+
+    &--redeemed {
         background-color: $color-white2;
-        .wu-coupon__left{
+
+        .wu-coupon__left {
             border: 2px solid $color-white;
 
             &::after,
-            &::before{
+            &::before {
                 background-color: $color-white2;
             }
         }
 
-        .wu-coupon__status{
+        .wu-coupon__status {
             display: block;
         }
+
         .wu-coupon__price,
         .wu-coupon__transac,
-        .wu-coupon__valid{
+        .wu-coupon__valid {
             color: #D9D9D9;
         }
 
-        .wu-coupon__right{
-            &_arrow{
-                svg{
-                    path{
+        .wu-coupon__right {
+            &_arrow {
+                svg {
+                    path {
                         fill: #D9D9D9;
                     }
                 }
-            }   
+            }
         }
     }
 }
