--- a/assets/scss/organisms/_header.scss
+++ b/assets/scss/organisms/_header.scss
@@ -1,24 +1,33 @@
 .wu-header {
   background-color: $color-black;
+  z-index: 1;
+  position: relative;
+
   &__logo {
     max-width: 120px;
+
     img {
       width: 100%;
       height: auto;
     }
   }
+
   .container-fluid {
     padding: 0;
   }
+
   .navbar-light .navbar-brand {
     color: $color-white;
   }
+
   .navbar-light .navbar-toggler-icon {
     background-image: url("../images/hamburg-white.svg");
   }
+
   .navbar-toggler {
     padding: 0;
   }
+
   .navbar-light .navbar-nav .nav-link {
     color: $color-white;
   }
