--- a/assets/scss/atoms/_button.scss
+++ b/assets/scss/atoms/_button.scss
@@ -20,6 +20,7 @@
       justify-content: center;
       // height: 40px;
       font-weight: $font-semi-bold;
+      padding: $spacer-2 $spacer-4;
 
       svg {
          width: 15px;
