--- a/assets/scss/molecules/_coupon.scss
+++ b/assets/scss/molecules/_coupon.scss
@@ -110,15 +110,17 @@
 
     &__hid {
         position: absolute;
-        width: 0;
+        // width: 0;
+        width: 100%;
         height: 100%;
-        right: 0;
+        right: -100%;
         top: 0;
         background-color: $color-yellow;
         transition: 0.3s;
 
         &--active {
-            width: 100%;
+            // width: 100%;
+            right: 0;
             transition: 0.3s;
         }
     }
