--- a/assets/scss/atoms/_button.scss
+++ b/assets/scss/atoms/_button.scss
@@ -8,6 +8,9 @@
    border-radius: 20px;
    height: 44px;
    padding: $spacer-2 $spacer-5;
+   display: flex;
+   justify-content: center;
+   align-items: center;
 
    &--black {
       color: $color-yellow;
