--- a/assets/scss/molecules/_share-modal.scss
+++ b/assets/scss/molecules/_share-modal.scss
@@ -46,8 +46,9 @@
     }
 
     .wu-coupon__left {
-        width: 100%;
-        margin: $spacer-2 0;
+        // width: 100%;
+        width: 80%;
+        margin: $spacer-2 auto;
 
         &::after,
         &::before {
@@ -58,7 +59,7 @@
     .modal-content {
         border-top-left-radius: 40px;
         border-top-right-radius: 40px;
-        margin-bottom: -125px;
+        margin-bottom: -200px;
     }
 
     &__body {
