--- a/assets/scss/organisms/_header.scss
+++ b/assets/scss/organisms/_header.scss
@@ -4,7 +4,8 @@
   position: relative;
 
   &__logo {
-    max-width: 120px;
+    max-width: 140px;
+    padding: 0;
 
     img {
       width: 100%;
