--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -21,6 +21,7 @@
 @import "./molecules/lucky-draw-card";
 @import "./molecules/coupon-modal";
 @import "./molecules/share-modal";
+@import "./molecules/lucky-draw-tile";
 
 // organisms
 @import "./organisms/welcome";
