--- a/assets/scss/base/_colors.scss
+++ b/assets/scss/base/_colors.scss
@@ -5,3 +5,4 @@ $color-white2 : rgb(245, 245, 250);
 $color-yellow : rgb(255, 221, 0);
 $color-grey : rgb(117, 111, 117);
 $color-grey2 : rgb(245, 245, 250);
+$color-grey3 : rgba(117, 111, 117, 0.5);
