--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -34,4 +34,5 @@
 @import "./organisms/tab";
 @import "./organisms/my-coupons";
 @import "./organisms/yes";
+@import "organisms/lucky-draw-page";
 // pages
