--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -10,7 +10,7 @@
 @font-face {
   font-family: 'Euclid Circular A';
   src: url('../fonts/EuclidCircularA-Italic.woff2') format('woff2'),
-      url('../fonts/EuclidCircularA-Italic.woff') format('woff');
+    url('../fonts/EuclidCircularA-Italic.woff') format('woff');
   font-weight: normal;
   font-style: italic;
   font-display: swap;
@@ -19,7 +19,7 @@
 @font-face {
   font-family: 'Euclid Circular A';
   src: url('../fonts/EuclidCircularA-BoldItalic.woff2') format('woff2'),
-      url('../fonts/EuclidCircularA-BoldItalic.woff') format('woff');
+    url('../fonts/EuclidCircularA-BoldItalic.woff') format('woff');
   font-weight: bold;
   font-style: italic;
   font-display: swap;
@@ -28,7 +28,7 @@
 @font-face {
   font-family: 'Euclid Circular A';
   src: url('../fonts/EuclidCircularA-Bold.woff2') format('woff2'),
-      url('../fonts/EuclidCircularA-Bold.woff') format('woff');
+    url('../fonts/EuclidCircularA-Bold.woff') format('woff');
   font-weight: bold;
   font-style: normal;
   font-display: swap;
@@ -37,7 +37,7 @@
 @font-face {
   font-family: 'Euclid Circular A';
   src: url('../fonts/EuclidCircularA-MediumItalic.woff2') format('woff2'),
-      url('../fonts/EuclidCircularA-MediumItalic.woff') format('woff');
+    url('../fonts/EuclidCircularA-MediumItalic.woff') format('woff');
   font-weight: 500;
   font-style: italic;
   font-display: swap;
@@ -46,7 +46,7 @@
 @font-face {
   font-family: 'Euclid Circular A';
   src: url('../fonts/EuclidCircularA-LightItalic.woff2') format('woff2'),
-      url('../fonts/EuclidCircularA-LightItalic.woff') format('woff');
+    url('../fonts/EuclidCircularA-LightItalic.woff') format('woff');
   font-weight: 300;
   font-style: italic;
   font-display: swap;
@@ -55,7 +55,7 @@
 @font-face {
   font-family: 'Euclid Circular A';
   src: url('../fonts/EuclidCircularA-Light.woff2') format('woff2'),
-      url('../fonts/EuclidCircularA-Light.woff') format('woff');
+    url('../fonts/EuclidCircularA-Light.woff') format('woff');
   font-weight: 300;
   font-style: normal;
   font-display: swap;
@@ -64,7 +64,7 @@
 @font-face {
   font-family: 'Euclid Circular A';
   src: url('../fonts/EuclidCircularA-SemiBold.woff2') format('woff2'),
-      url('../fonts/EuclidCircularA-SemiBold.woff') format('woff');
+    url('../fonts/EuclidCircularA-SemiBold.woff') format('woff');
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -73,7 +73,7 @@
 @font-face {
   font-family: 'Euclid Circular A';
   src: url('../fonts/EuclidCircularA-SemiBoldItalic.woff2') format('woff2'),
-      url('../fonts/EuclidCircularA-SemiBoldItalic.woff') format('woff');
+    url('../fonts/EuclidCircularA-SemiBoldItalic.woff') format('woff');
   font-weight: 600;
   font-style: italic;
   font-display: swap;
@@ -82,7 +82,7 @@
 @font-face {
   font-family: 'Euclid Circular A';
   src: url('../fonts/EuclidCircularA-Medium.woff2') format('woff2'),
-      url('../fonts/EuclidCircularA-Medium.woff') format('woff');
+    url('../fonts/EuclidCircularA-Medium.woff') format('woff');
   font-weight: 500;
   font-style: normal;
   font-display: swap;
@@ -91,7 +91,7 @@
 @font-face {
   font-family: 'Euclid Circular A';
   src: url('../fonts/EuclidCircularA-Regular.woff2') format('woff2'),
-      url('../fonts/EuclidCircularA-Regular.woff') format('woff');
+    url('../fonts/EuclidCircularA-Regular.woff') format('woff');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
@@ -111,7 +111,8 @@ body {
   line-height: 1.3;
   min-height: 100%;
   color: $color-black;
-  background-color: $color-white;
+  // background-color: $color-white;
+  background-color: $color-grey2;
 }
 
 a,
