--- a/assets/scss/organisms/_tab.scss
+++ b/assets/scss/organisms/_tab.scss
@@ -1,5 +1,11 @@
 .wu-tab {
     width: 100%;
+    margin: $spacer-2 auto;
+    overflow: scroll;
+
+    &::-webkit-scrollbar {
+        display: none;
+    }
 
     &__outer {
         display: flex;
@@ -16,16 +22,33 @@
         white-space: nowrap;
         margin: 0 $spacer-2;
         transition: 0.3s;
+        position: relative;
+
+        &::after {
+            content: '';
+            position: absolute;
+            height: 2px;
+            width: 0;
+            background-color: $color-black;
+            left: 0;
+            bottom: -2px;
+            transition: 0.3s;
+        }
 
         &:hover {
             color: $color-black;
             border-color: $color-black;
             transition: 0.3s;
+
+            &::after {
+                width: 100%;
+            }
         }
 
         &--active {
             color: $color-black;
             position: relative;
+            pointer-events: none;
 
             &::after {
                 content: '';
