Coupon tile finished

--- a/assets/scss/base/_colors.scss
+++ b/assets/scss/base/_colors.scss
@@ -1,7 +1,7 @@
-$color-black: rgb(0, 0, 0);
-$color-black2 : rgb(10, 0, 5);
-$color-white: rgb(255, 255, 255);
-$color-white2 : rgb(245, 245, 250);
-$color-yellow : rgb(255, 221, 0);
-$color-grey : rgb(117, 111, 117);
-$color-grey2 : rgb(245, 245, 250);
+$color-black: #000000;
+$color-black2: #0a0005;
+$color-white: #ffffff;
+$color-white2: #f5f5fa;
+$color-yellow: #ffdd00;
+$color-grey: #756f75;
+$color-grey2: #f5f5fa;
