--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -35,4 +35,5 @@
 @import "./organisms/my-coupons";
 @import "./organisms/yes";
 @import "organisms/lucky-draw-page";
+@import "organisms/spin-wheel";
 // pages
