--- a/assets/scss/base/_breakpoints.scss
+++ b/assets/scss/base/_breakpoints.scss
@@ -23,7 +23,16 @@
 }
 
 @mixin ie-fix {
-  @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
+
+  @media all and (-ms-high-contrast: none),
+  (-ms-high-contrast: active) {
+    @content;
+  }
+}
+
+
+@mixin wide {
+  @media (min-width: 1920px) and (max-width: 3840px) {
     @content;
   }
 }
