--- a/assets/scss/organisms/_spin-wheel.scss
+++ b/assets/scss/organisms/_spin-wheel.scss
@@ -287,6 +287,8 @@
     }
 
     &__modalbg {
+        border-radius: 15px;
+        overflow: hidden;
         position: absolute;
         width: 100%;
         height: 100%;
@@ -371,5 +373,100 @@
     100% {
         transform: rotate(360deg);
         animation-duration: 4000ms;
+    }
+}
+
+@include wide {
+    .wu-spin-wheel {
+        &__logo {
+            padding: 100px 40px 100px 60px;
+        }
+
+        &__close {
+            margin: 0 50px;
+        }
+
+        &__body {
+            padding: 0 80px;
+        }
+
+        &__left,
+        &__right {
+            padding: $spacer-5;
+        }
+
+        &__sidehead {
+            h4 {
+                font-size: 90px;
+            }
+
+            font-size: 80px;
+        }
+
+        &__sidetext {
+            font-size: 65px;
+            margin-bottom: $spacer-3;
+        }
+
+        &__spinner {
+            width: 900px;
+            height: 900px;
+            margin-bottom: 50px;
+        }
+
+        &__pointer {
+            width: 90px;
+            height: 90px;
+        }
+
+        &__btn {
+            font-size: 80px;
+            padding: $spacer-2 $spacer-6;
+            border-radius: 75px;
+        }
+
+        &--spin {
+            .wu-spin-wheel__disc {
+                transform: scale(1.3) translateY(-180px);
+            }
+        }
+
+        &__modal {
+            .modal-dialog {
+                max-width: 1900px;
+            }
+
+            .modal-body {
+                font-size: 85px;
+            }
+
+            .modal-content {
+                padding: 100px;
+            }
+
+            .wu-spin-wheel__btn {
+                margin-top: $spacer-3 !important;
+                padding: $spacer-2 80px;
+            }
+        }
+
+        &__modalbg {
+            border-radius: 50px;
+        }
+
+        &__congrts {
+            font-size: 130px;
+            margin-bottom: $spacer-3;
+        }
+
+        &__prize {
+            font-size: 100px;
+            margin-bottom: $spacer-3;
+        }
+
+        &__winner {
+            font-size: 180px;
+            margin-bottom: $spacer-3;
+        }
     }
 }
