spinwheel asset update

--- a/assets/scss/base/_base.scss
+++ b/assets/scss/base/_base.scss
@@ -204,6 +204,12 @@ button {
   }
 }
 
+@include ultra-wide {
+  .content-wrapper-small {
+    max-width: none;
+  }
+}
+
 @include wide {
   .content-wrapper-small {
     max-width: none;
