free gift new tile

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -22,6 +22,7 @@
 @import "./molecules/coupon-modal";
 @import "./molecules/share-modal";
 @import "./molecules/lucky-draw-tile";
+@import "./molecules/free-gift-tile";
 
 // organisms
 @import "./organisms/welcome";
