--- a/assets/scss/organisms/_spin-wheel.scss
+++ b/assets/scss/organisms/_spin-wheel.scss
@@ -1,6 +1,6 @@
 .wu-spin-wheel {
     background-color: $color-black;
-    height: 100vh;
+    height: calc(100vh + 50px);
     overflow: hidden;
     position: relative;
 
@@ -114,7 +114,27 @@
         border-radius: 5px;
         padding: $spacer-3;
         text-align: center;
+        min-height: 410px;
+        max-height: 410px;
+        overflow-y: scroll;
+
+        &::-webkit-scrollbar {
+            width: 5px;
+        }
+
+        &::-webkit-scrollbar-track {
+            background-color: $color-white;
+            border-radius: 100px;
+        }
+
+        &::-webkit-scrollbar-thumb {
+            background-color: $color-grey;
+            border-radius: 100px;
+        }
     }
+
+
+
 
     &__sidehead {
         font-size: 24px;
@@ -206,16 +226,30 @@
         background-size: contain;
         width: 350px;
         height: 350px;
+        border-radius: 50%;
+        overflow: hidden;
         // margin-bottom: $spacer-4;
-        animation-name: spin;
-        animation-iteration-count: infinite;
-        animation-timing-function: linear;
-        animation-delay: 1.5s;
+        // animation-name: spin;
+        // animation-iteration-count: infinite;
+        // animation-timing-function: linear;
+        // animation-delay: 1.5s;
         // transition: transform 5s ease-in-out;
         // transition-duration: 20s;
 
-        img {
+        img,
+        video {
             width: 100%;
+        }
+
+        iframe {
+            width: 100%;
+            height: 100%;
+
+            video:-webkit-full-page-media {
+                width: 100% !important;
+                height: 100% !important;
+            }
+
         }
     }
 
@@ -348,6 +382,8 @@
         }
 
         .wu-spin-wheel__close {
+            display: none;
+
             svg {
                 path {
                     stroke: $color-white;
@@ -355,10 +391,10 @@
             }
         }
 
-        .wu-spin-wheel__spinner {
-            animation-duration: 1000ms;
-            transition: 0.9s;
-        }
+        // .wu-spin-wheel__spinner {
+        //     animation-duration: 1000ms;
+        //     transition: 0.9s;
+        // }
 
         .wu-spin-wheel__discwrap {
             transform: scale(1.3) translateY(-40px);
@@ -387,25 +423,25 @@
     }
 
     // stop class
-    &--stop {
-        .wu-spin-wheel__spinner {
-            animation-iteration-count: 0;
-        }
-    }
+    // &--stop {
+    //     .wu-spin-wheel__spinner {
+    //         animation-iteration-count: 0;
+    //     }
+    // }
 }
 
 
-@keyframes spin {
-    0% {
-        transform: rotate(0deg);
-        animation-duration: 4000ms;
-    }
+// @keyframes spin {
+//     0% {
+//         transform: rotate(0deg);
+//         animation-duration: 4000ms;
+//     }
 
-    100% {
-        transform: rotate(360deg);
-        animation-duration: 4000ms;
-    }
-}
+//     100% {
+//         transform: rotate(360deg);
+//         animation-duration: 4000ms;
+//     }
+// }
 
 @include ultra-wide {
     .wu-spin-wheel {
@@ -424,6 +460,11 @@
         &__left,
         &__right {
             padding: $spacer-5;
+            max-height: 1125px;
+
+            &::-webkit-scrollbar {
+                width: 10px;
+            }
         }
 
         &__sidehead {
@@ -462,7 +503,7 @@
 
         &--spin {
             .wu-spin-wheel__discwrap {
-                transform: scale(1.3) translateY(-180px);
+                transform: scale(1.3) translateY(-80px);
             }
         }
 
@@ -523,6 +564,7 @@
         &__left,
         &__right {
             padding: $spacer-5;
+            max-height: 770px;
         }
 
         &__sidehead {
@@ -561,7 +603,7 @@
 
         &--spin {
             .wu-spin-wheel__discwrap {
-                transform: scale(1.3) translateY(-180px);
+                transform: scale(1.3) translateY(-80px);
             }
         }
 
